Ajustando webpack y librerias

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Landing para Nutresa - Tiendasjumbo.co",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,16 @@
   },
   "homepage": "https://github.com/cencosud-ecommerce/landing-nutresa#readme",
   "devDependencies": {
+    "node-sass": "^4.10.0",
     "webpack": "^4.27.0",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "mini-css-extract-plugin": "^0.4.5",
+    "path": "^0.12.7",
+    "sass-loader": "^7.1.0",
+    "url-loader": "^1.1.2"
   }
 }
